--- a/wp-content/themes/woo-angular/package.json
+++ b/wp-content/themes/woo-angular/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
     "ngx-wooapi": "5.x.x",
     "rxjs": "^5.5.6",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
