--- a/wp-content/themes/woo-angular/package.json
+++ b/wp-content/themes/woo-angular/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "ngx-cookie-service": "^2.0.2",
     "ngx-wooapi": "5.x.x",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
